--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -78,7 +78,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'quiz_manager' %}">
+                                    <a class="nav-link" href="{% url 'student_taken_quiz' %}">
                                         Quizzes
                                     </a>
                                 </li>
