--- a/app_students/templates/certificate/certificate_template.html
+++ b/app_students/templates/certificate/certificate_template.html
@@ -2,12 +2,248 @@
 <html>
 
     <head>
-       
+        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
         <meta name="Generator" content="Microsoft Word 14 (filtered)">
         <title>Certificate of
             		Training -
             {{ student_name }}</title>
-       
+        <style>
+
+            /* Font Definitions */
+            @font-face {
+                font-family: Cambria;
+                panose-1: 2 4 5 3 5 4 6 3 2 4;
+            }
+
+            @font-face {
+                font-family: Tahoma;
+                panose-1: 2 11 6 4 3 5 4 4 2 4;
+            }
+
+            @font-face {
+                font-family: FreeSans;
+            }
+
+            @font-face {
+                font-family: "Americana BT";
+            }
+
+            @font-face {
+                font-family: "Colonna MT";
+                panose-1: 4 2 8 5 6 2 2 3 2 3;
+            }
+
+            /* Style Definitions */
+            p.MsoNormal,
+            li.MsoNormal,
+            div.MsoNormal {
+                margin: 0 0 0.0001pt;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            h1 {
+                margin: 12.0pt 0 3.0pt 0.3in;
+                text-indent: -0.3in;
+                page-break-after: avoid;
+                font-size: 16.0pt;
+                font-family: "Cambria", "serif";
+            }
+
+            p.MsoHeader,
+            li.MsoHeader,
+            div.MsoHeader {
+                mso-style-link: "Header Char";
+                margin: 0 0 0.0001pt;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            p.MsoFooter,
+            li.MsoFooter,
+            div.MsoFooter {
+                mso-style-link: "Footer Char";
+                margin: 0 0 0.0001pt;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            p.MsoCaption,
+            li.MsoCaption,
+            div.MsoCaption {
+                margin: 6.0pt 0;
+                font-size: 12.0pt;
+                font-family: "Times New Roman", "serif";
+                font-style: italic;
+            }
+
+            p.MsoList,
+            li.MsoList,
+            div.MsoList {
+                margin: 0 0 7.0pt;
+                line-height: 120%;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            p.MsoBodyText,
+            li.MsoBodyText,
+            div.MsoBodyText {
+                margin: 0 0 7.0pt;
+                line-height: 120%;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            p.MsoSubtitle,
+            li.MsoSubtitle,
+            div.MsoSubtitle {
+                margin: 0 0 3.0pt;
+                text-align: center;
+                font-size: 12.0pt;
+                font-family: "Cambria", "serif";
+            }
+
+            a:link,
+            span.MsoHyperlink {
+                color: blue;
+                text-decoration: underline;
+            }
+
+            a:visited,
+            span.MsoHyperlinkFollowed {
+                color: #954F72;
+                text-decoration: underline;
+            }
+
+            p.MsoAcetate,
+            li.MsoAcetate,
+            div.MsoAcetate {
+                margin: 0 0 0.0001pt;
+                font-size: 8.0pt;
+                font-family: "Tahoma", "sans-serif";
+            }
+
+            span.BalloonTextChar {
+                mso-style-name: "Balloon Text Char";
+                font-family: "Tahoma", "sans-serif";
+            }
+
+            span.SubtitleChar {
+                mso-style-name: "Subtitle Char";
+                font-family: "Cambria", "serif";
+            }
+
+            span.TitleChar {
+                mso-style-name: "Title Char";
+                font-family: "Cambria", "serif";
+                font-weight: bold;
+            }
+
+            span.Heading1Char {
+                mso-style-name: "Heading 1 Char";
+                font-family: "Cambria", "serif";
+                font-weight: bold;
+            }
+
+            span.fn {
+                mso-style-name: fn;
+            }
+
+            span.street-address {
+                mso-style-name: street-address;
+            }
+
+            span.locality {
+                mso-style-name: locality;
+            }
+
+            span.region {
+                mso-style-name: region;
+            }
+
+            span.postal-code {
+                mso-style-name: postal-code;
+            }
+
+            span.tel {
+                mso-style-name: tel;
+            }
+
+            p.Heading,
+            li.Heading,
+            div.Heading {
+                mso-style-name: Heading;
+                margin: 12.0pt 0 3.0pt;
+                text-align: center;
+                font-size: 16.0pt;
+                font-family: "Cambria", "serif";
+                font-weight: bold;
+            }
+
+            p.Index,
+            li.Index,
+            div.Index {
+                mso-style-name: Index;
+                margin: 0 0 0.0001pt;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            p.TableContents,
+            li.TableContents,
+            div.TableContents {
+                mso-style-name: "Table Contents";
+                margin: 0 0 0.0001pt;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+            }
+
+            p.TableHeading,
+            li.TableHeading,
+            div.TableHeading {
+                mso-style-name: "Table Heading";
+                margin: 0 0 0.0001pt;
+                text-align: center;
+                font-size: 10.0pt;
+                font-family: "Times New Roman", "serif";
+                font-weight: bold;
+            }
+
+            span.HeaderChar {
+                mso-style-name: "Header Char";
+                mso-style-link: Header;
+            }
+
+            span.FooterChar {
+                mso-style-name: "Footer Char";
+                mso-style-link: Footer;
+            }
+
+            .MsoChpDefault {
+                font-size: 10.0pt;
+            }
+
+            /* Page Definitions */
+            @page WordSection1 {
+                size: 11.0in 8.5in;
+                margin: 1.25in 1.5in;
+            }
+
+            div.WordSection1 {
+                page: WordSection1;
+            }
+
+            /* List Definitions */
+            ol {
+                margin-bottom: 0;
+            }
+
+            ul {
+                margin-bottom: 0;
+            }
+            -->
+        </style>
     </head>
 
     <body lang="EN-US" link="blue" vlink="#954F72">
@@ -105,8 +341,8 @@
                         <p class="MsoNormal" align="center" style='margin-right:.75pt;text-align:center;
                               background:white'>&nbsp;</p>
                         <p class="MsoNormal" align="center" style='text-align:center'>
-                            <img width="313" height="196" id="Picture1 9" src="https://construction-safety-nyc.com/static/images/iacet.jpg">
-                            <img width="399" height="196" id="Picture1 10" src="https://construction-safety-nyc.com/static/images/osha_auth.jpg">
+                            <img width="313" height="196" id="Picture1 9" src="https://pdhsafety.com/static/images/iacet.jpg">
+                            <img width="399" height="196" id="Picture1 10" src="https://pdhsafety.com/static/images/osha_auth.jpg">
                         </p>
                     </td>
                 </tr>
