--- a/app_teachers/templates/manage/course/_features.html
+++ b/app_teachers/templates/manage/course/_features.html
@@ -19,7 +19,7 @@
                             <div class="col-3">
                                 <div class="list-group" id="list-tab" role="tablist">
                                     <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">
-                                        Schedule</a>
+                                        Credits</a>
                                     <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">
                                         Learning Outcomes</a>
                                     <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Notes
@@ -90,7 +90,7 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label for="exampleFormControlInput1">Duration</label>
-                                                    <input type="text" class="form-control" name="duration" value="{{ duration }}"/>
+                                                    <input type="text" class="form-control bg-white" name="duration" value="{{ duration }}"/>
                                                 </div>
                                             </div>
 
