--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -109,15 +109,6 @@
                         </div>
                     </div>
 
-                    <div class="single-course-details mb-5">
-                        <h4 class="course-title">
-                            Schedule:</h4>
-                        <div>
-                            {{ object.features.first.schedule  |safe }}
-                        </div>
-                    </div>
-
-
                 </div>
                 <div class="col-lg-4">
                     <div class="course-sidebar">
@@ -150,11 +141,7 @@
                                     {% endif %}
 
                                 </div>
-
-
                                 <div class="buy-btn">
-
-
                                     {% if object.is_free %}
                                         {% if request.user.is_authenticated %}
                                             <a href="javascript:;" class="btn btn-main btn-block link-free-enroll">
@@ -177,6 +164,14 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="course-widget course-details-info">
+                            <h4 class="course-title">Credits </h4>
+                           <p>
+                            {{ object.features.first.schedule  |safe }}
+                           </p>
+                        </div>
+
                         <div class="course-widget course-details-info">
                             <h4 class="course-title">This Course Includes</h4>
                             <ul>
@@ -253,12 +248,12 @@
                         </div>
 
                         <div class="course-widget course-metarials">
-                            <h4 class="course-title">Modules</h4>
+                            <h4 class="course-title">Modules - ({{object.modules.count}})</h4>
                             <ul>
 
                                 {% for m in object.modules.all %}
                                     <li>
-                                        <i class="fa fa-check"></i>
+                                        <i class="fa">{{forloop.counter}})</i>
                                         {{ m.title }}
                                     </li>
 
