--- a/app_cart/templates/cart.html
+++ b/app_cart/templates/cart.html
@@ -104,6 +104,17 @@
             </div>
         </section>
         <!--shop category end-->
+
+        <section class="team section-padding bg-grey py-3 my-4">
+            <div class="container">
+             
+                <div class="row">
+                    <div class="col text-center">
+                        <img src="{% static 'images/money_back.png' %}" width="400" alt="money back">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
