--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -270,6 +270,17 @@
         </div>
     </section>
 
+    <section class="team section-padding bg-grey py-3 mb-4">
+        <div class="container">
+         
+            <div class="row">
+                <div class="col text-center">
+                    <img src="{% static 'images/money_back.png' %}" width="400" alt="money back">
+                </div>
+            </div>
+        </div>
+    </section>
+
     {% endwith %}
 
 
