--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Two years of use for each class  
+                                        Two years of use for each class
                                     </h4>
                                 </div>
                             </div>
@@ -96,124 +96,121 @@
     </section>
 
     {% if courses.count > 0 %}
-    <section class="section-padding popular-course pb-0">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="section-heading">
-                        <span class="subheading">Top Trending Courses</span>
-                        <h3>Our Popular Online Courses</h3>
+        <section class="section-padding popular-course-list2 pb-0 mb-3">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="section-heading">
+                            <span class="subheading">Top Trending Courses</span>
+                            <h3>Our Popular Online Courses</h3>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="course-btn text-lg-right">
+                            <a href="/courses" class="btn btn-main">
+                                <i class="fa fa-store mr-2"></i>All Courses</a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-lg-6">
-                    <div class="course-btn text-lg-right">
-                        <a href="/courses" class="btn btn-main">
-                            <i class="fa fa-store mr-2"></i>All Courses</a>
-                    </div>
-                </div>
-            </div>
+                <div class="row">
 
-            <div class="row">
+                    {% for course in courses %}
+                        {% with subject=course.subject %}
+                        <div class="col-lg-6 col-md-6 course-item">
 
-                {% for course in courses %}
-                    {% with subject=course.subject %}
-                    <div class="col-lg-4 col-md-6 course-item">
-
-                        <input type="hidden" name="id" value="{{ course.id }}"/>
-                        <input type="hidden" name="title" value="{{ course.title }}"/>
-                        <input type="hidden" name="subject" value="{{ subject }}"/>
-                        <input type="hidden" name="price" value="{{ course.price }}"/>
-                        <input type="hidden" name="discounted_price" value="{{ course.discounted_price }}"/>
-                        <input type="hidden" name="modules" value="{{ course.total_modules }}"/>
+                            <input type="hidden" name="id" value="{{ course.id }}"/>
+                            <input type="hidden" name="title" value="{{ course.title }}"/>
+                            <input type="hidden" name="subject" value="{{ subject }}"/>
+                            <input type="hidden" name="price" value="{{ course.price }}"/>
+                            <input type="hidden" name="discounted_price" value="{{ course.discounted_price }}"/>
+                            <input type="hidden" name="modules" value="{{ course.total_modules }}"/>
 
 
-                        <div class="course-block">
-                            <div class="course-img">
-                                <a href="{% url 'course_detail' course.slug %}">
-                                    {% if course.image %}
-                                        <img src="{{ course.image }}" alt="image" class="img-fluid"/>
-                                    {% else %}
-                                        <img src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image" class="img-fluid"/>
-                                    {% endif %}
-                                </a>
-                                {% if course.features.first.skill_level %}
-                                    <span class="course-label">{{ course.features.first.skill_level }}</span>
-                                {% endif %}
-
-                            </div>
-
-                            <div class="course-content">
-                                <div class="course-price ">
-                                    {% if course.is_free %}
-                                        Free Course
-                                    {% elif course.discounted_price > 0 %}
-                                        ${{ course.discounted_price }}
-                                        <span class="del">${{ course.price }}</span>
-                                    {% else %}
-                                        ${{ course.price }}
-                                    {% endif %}
-                                </div>
-
-                                <h4>
-                                    <a href="{% url 'course_detail' course.slug %}">
-                                        {{ course.title }}
-                                    </a>
-                                </h4>
-                                <div class="rating">
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <span>(5.00)</span>
-                                </div>
-                                <p>{{ subject }}</p>
-
-                                <div class="course-footer d-lg-flex align-items-center justify-content-between">
-                                    <div class="course-meta">
-                                        {% if course.features.first.duration %}
-                                            <span class="course-student">
-                                                <i class="bi bi-group"></i>
-                                                {{ course.features.first.duration }}</span>
-                                        {% endif %}
-                                        <span class="course-duration">
-                                            <i class="bi bi-badge3"></i>
-                                            {{ course.total_modules }}
-                                            Modules</span>
+                            <div class="course-block course-list-item">
+                                <div class="row align-items-center">
+                                    <div class="col-lg-4">
+                                        <div class="course-img">
+                                            <a href="{% url 'course_detail' course.slug %}">
+                                                {% if course.image %}
+                                                    <img src="{{ course.image }}" alt="image" class="img-fluid rounded-0"/>
+                                                {% else %}
+                                                    <img src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image" class="img-fluid rounded-0"/>
+                                                {% endif %}
+                                            </a>
+                                        </div>
                                     </div>
+                                    <div class="col-lg-8">
+                                        <div class="course-content">
+                                            <div class="course-price ">
+                                                {% if course.is_free %}
+                                                    Free Course
+                                                {% elif course.discounted_price > 0 %}
+                                                    ${{ course.discounted_price }}
+                                                    <span class="del">${{ course.price }}</span>
+                                                {% else %}
+                                                    ${{ course.price }}
+                                                {% endif %}
+                                            </div>
 
-                                    <div class="buy-btn">
-                                        <a href="{% url 'course_detail' course.slug %}" class="btn btn-main-2 btn-small">Details</a>
+                                            <h4>
+                                                <a href="{% url 'course_detail' course.slug %}">
+                                                    {{ course.title }}
+                                                </a>
+                                            </h4>
+                                            <div class="rating">
+                                                <p>{{ subject }}</p>
+                                            </div>
+
+                                            <div class="course-footer d-lg-flex align-items-center justify-content-between">
+                                                <div class="course-meta">
+                                                    {% if course.features.first.duration %}
+                                                        <span class="course-student">
+                                                            <i class="bi bi-group"></i>
+                                                            {{ course.features.first.duration }}</span>
+                                                    {% endif %}
+                                                    <span class="course-duration">
+                                                        <i class="bi bi-badge3"></i>
+                                                        {{ course.total_modules }}
+                                                        Modules</span>
+                                                </div>
+
+                                                <div class="buy-btn">
+                                                    <a href="{% url 'course_detail' course.slug %}" class="btn btn-main-2 btn-small">Details</a>
+                                                </div>
+                                            </div>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
+
                         </div>
 
+                        
+                        {% endwith %}
+                    {% endfor %}
 
-                    </div>
-                    {% endwith %}
-                {% endfor %}
 
-
+                </div>
             </div>
-        </div>
-    </section>
-    {%endif%}
+        </section>
+    {% endif %}
+
+    <section class="team section-padding bg-grey py-3 mb-4">
+        <div class="container">
+
+            <div class="row">
+                <div class="col text-center">
+                    <img src="{% static 'images/money_back.png' %}" width="400" alt="money back"></div>
+                </div>
+            </div>
+        </section>
 
     {% endblock %}
 
     {% block scripts %}
-        <script>
-        </script>
+        <script></script>
     {% endblock %}
